tests/macros/multi_select/plugin.stderr
error: option `plugin` does not exist for kind `multi_select`
 --> $DIR/plugin.rs:2:49
  |
2 |     let q = discourse::questions![MultiSelect { plugin: todo!() }];
  |                                                 ^^^^^^
